# openclaw-dev

./: .gitignore  CHANGELOG.md  Makefile  README.md  README_CN.md  SKILL.md  bandit.yaml  openclaw.json  pyproject.toml  requirements-dev.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml
agent/: BLUEPRINT.json  COLD.ref.json  COMMANDS.env  CONTEXT.json  DECISIONS.md  HOT.md  PLAN.md  POLICY.md  RESULT.md  STATUS.json  TASK.md  WARM.md
agents/: openai.yaml
docs/: MEMORY_NAMESPACE_SOP.md  QUALITY_GATES.md  TROUBLESHOOTING.md  TROUBLESHOOTING_CN.md  USAGE.md  USAGE_CN.md  WORKFLOW.md  WORKFLOW_CN.md
references/: agent_templates.md
scripts/: autopr.py  handoff_protocol.py  init_openclaw_dev.py  memory_namespace.py  observability_report.py  para_recall.py  run_supervisor_daemon.sh  security_gate.py  session_end_extractor.py  supervisor_loop.py  sync_to_skill.py  top1_readiness.py  trigger_supervisor.py  update_tiers.py
scripts/qa/: bootstrap.sh  review_gate.py
tests/: load_script.py  test_autopr.py  test_handoff_protocol.py  test_memory_namespace.py  test_observability_report.py  test_para_recall.py  test_security_gate.py  test_session_end_extractor.py  test_supervisor_context.py  test_supervisor_security.py  test_sync_to_skill.py  test_top1_readiness.py  test_trigger_supervisor.py
tests/eval/: test_multi_agent_regression.py  test_session_end_eval.py
